bind porder and porderItem on porder.aspx page

--- a/StoreManagement/web.config
+++ b/StoreManagement/web.config
@@ -1,7 +1,11 @@
 <?xml version="1.0"?>
 <configuration>
 	<connectionStrings>
-     <add name="ShopDB" connectionString="Data Source=DESKTOP-EFBER4I;Initial Catalog=db_shopSM;User ID=sa;Password=password@123"
+    <!--jyoti-->
+     <!--<add name="ShopDB" connectionString="Data Source=DESKTOP-EFBER4I;Initial Catalog=db_shopSM;User ID=sa;Password=password@123"
+         providerName="System.Data.SqlClient" />-->
+     <!--Deepak-->
+    <add name="ShopDB" connectionString="Data Source=DEEPAK-PC;Initial Catalog=db_shopSM;User ID=sa;Password=password@123"
          providerName="System.Data.SqlClient" />
      <!--<add name="db_shopSMConnectionString" connectionString="Data Source=DESKTOP-JNJ9V6O;Initial Catalog=db_shopSM;User ID=sa;Password=password@123"
          providerName="System.Data.SqlClient" />-->
