--- a/StoreManagement/web.config
+++ b/StoreManagement/web.config
@@ -20,12 +20,22 @@
 				<add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 				</assemblies>
 		</compilation>
-		<pages>
+		<pages >
 			<controls>
 				<add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit"/>
 			</controls>
-		</pages></system.web>
+		</pages>
+  
+  </system.web>
 	<system.webServer>
 		<modules runAllManagedModulesForAllRequests="false"/>
 	</system.webServer>
 </configuration>
+
+
+
+
+
+    
+
+
