change in master

--- a/StoreManagement/web.config
+++ b/StoreManagement/web.config
@@ -2,12 +2,12 @@
 <configuration>
 	<connectionStrings>
     <!--jyoti-->                          
-     <add name="ShopDB" connectionString="Data Source=DESKTOP-IKF4E1H;Initial Catalog=db_shop;Persist Security Info=True;User ID=sa;Password=password@123"
-         providerName="System.Data.SqlClient" />
+     <!--<add name="ShopDB" connectionString="Data Source=DESKTOP-IKF4E1H;Initial Catalog=db_shop;Persist Security Info=True;User ID=sa;Password=password@123"
+         providerName="System.Data.SqlClient" />-->
     
      <!--Deepak-->
-    <!--<add name="ShopDB" connectionString="Data Source=DEEPAK-PC;Initial Catalog=db_shopSM;User ID=sa;Password=password@123"
-         providerName="System.Data.SqlClient" />-->
+    <add name="ShopDB" connectionString="Data Source=DEEPAK-PC;Initial Catalog=db_shopSM;User ID=sa;Password=password@123"
+         providerName="System.Data.SqlClient" />
     
      <!--<add name="db_shopSMConnectionString" connectionString="Data Source=DESKTOP-JNJ9V6O;Initial Catalog=db_shopSM;User ID=sa;Password=password@123"
          providerName="System.Data.SqlClient" />-->
