--- a/StoreManagement/StoreManagement.csproj
+++ b/StoreManagement/StoreManagement.csproj
@@ -109,20 +109,6 @@
     <Compile Include="ReportSection\SalesReturn.aspx.designer.cs">
       <DependentUpon>SalesReturn.aspx</DependentUpon>
     </Compile>
-    <Compile Include="WebForm1.aspx.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="WebForm1.aspx.designer.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="WebForm2.aspx.cs">
-      <DependentUpon>WebForm2.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="WebForm2.aspx.designer.cs">
-      <DependentUpon>WebForm2.aspx</DependentUpon>
-    </Compile>
     <Content Include="Admin\Category.aspx" />
     <Content Include="Admin\City.aspx" />
     <Content Include="Admin\Client.aspx" />
@@ -320,10 +306,9 @@
     <Content Include="ReportSection\PurchaseReceived.aspx" />
     <Content Include="ReportSection\Sales.aspx" />
     <Content Include="ReportSection\SalesReturn.aspx" />
+    <Content Include="ReportSection\WebForm1.aspx" />
     <Content Include="Scripts\chosen.jquery.js" />
     <Content Include="Style\theme.css" />
-    <Content Include="WebForm1.aspx" />
-    <Content Include="WebForm2.aspx" />
     <None Include="Scripts\jquery-1.6.4-vsdoc.js" />
     <Content Include="Scripts\jquery-1.6.4.js" />
     <Content Include="Scripts\jquery-1.6.4.min.js" />
@@ -342,6 +327,13 @@
     </Compile>
     <Compile Include="Master\AdminMaster.Master.designer.cs">
       <DependentUpon>AdminMaster.Master</DependentUpon>
+    </Compile>
+    <Compile Include="ReportSection\WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ReportSection\WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.master.cs">
       <DependentUpon>Site.master</DependentUpon>
