--- a/StoreManagement/web.config
+++ b/StoreManagement/web.config
@@ -6,7 +6,7 @@
          providerName="System.Data.SqlClient" />-->
     
      <!--Deepak-->
-    <add name="ShopDB" connectionString="Data Source=DESKTOP-IKF4E1H;Initial Catalog=db_SM;Persist Security Info=True;User ID=sa;Password=password@123"
+    <add name="ShopDB" connectionString="Data Source=DEEPAK-PC;Initial Catalog=db_Store;User ID=sa;Password=password@123"
          providerName="System.Data.SqlClient" />
     
      <!--<add name="db_shopSMConnectionString" connectionString="Data Source=DESKTOP-JNJ9V6O;Initial Catalog=db_shopSM;User ID=sa;Password=password@123"
